tests/NormalTests/paczka1/small_fuzzy/97885732.err
Error in line 10: S4 S466 72,6
Error in line 11: S4 S4 28,7
Error in line 9: HB9qFX8T A937 98,1
Error in line 8: 2dZ9an S466 23,5
Error in line 5: lXv0 A937 251,1
